# napari-test-plugin

./: LICENSE  README.md  pyproject.toml
test_plugin/: napari.yaml
